[gd_scene load_steps=2 format=3 uid="uid://d3hcollection"]

[ext_resource type="Script" path="res://game/scripts/ui/CollectionLogUI.gd" id="1_script"]

[node name="CollectionLogUI" type="CanvasLayer"]
layer = 50
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 8.0
offset_right = 60.0
offset_bottom = 28.0
grow_horizontal = 2
text = "Collection Log"
horizontal_alignment = 1

[node name="CategoryTabs" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 32.0
offset_right = -8.0
offset_bottom = 52.0
grow_horizontal = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 56.0
offset_right = -8.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -76.0
offset_right = 100.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
text = "Fish: 0 / 8 (0%)"
horizontal_alignment = 1

[node name="OverallProgressLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -58.0
offset_right = 60.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
text = "Overall: 0%"
horizontal_alignment = 1

[node name="MilestonePanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="MilestoneLabel" type="Label" parent="Panel/MilestonePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 16.0
grow_horizontal = 2
text = "Next: 25%"
horizontal_alignment = 1

[node name="ClaimButton" type="Button" parent="Panel/MilestonePanel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -18.0
offset_right = 30.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
text = "Claim"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 24.0
grow_horizontal = 0
text = "X"
